# sd-maskrcnn

./: #bbox_diagnostics.py#  .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  bbox_diagnostics.py~  generation_requirements.txt  install.sh  remove_bg.py  requirements.txt  setup.py  vim
cfg/: augment.yaml  benchmark.yaml  benchmark_baseline.yaml  detect_npy.yaml  generate_dist_dataset.yaml  generate_mask_dataset.yaml  generate_mask_dataset_test.yaml  pcl_benchmark.yaml  resize.yaml  train.yaml  train_siamese.yaml  train_siamese_from_scratch.yaml  train_siamese_one_loss.yaml
cfg/partials/: mask_dataset.yaml  states.yaml  states_dist.yaml  states_test.yaml
clutter/: #_assh_b128.32.192.73#8028_b_ahome_aandrewyli_aclutter-det-maskrcnn_aclutter_atrain__clutter.py#  #clutter.py#  clutter.py  clutter.py~  det_utils.py  pipeline.py  pipeline.py~  test_indices.npy  train_clutter.py  train_indices.npy  val_indices.npy
image-labelling-tool/: Image labeller notebook.ipynb  LICENSE.txt  README.md  fill_holes.py  flask_app.py  requirements.txt  save_masks.ipynb  setup.py
image-labelling-tool/.ipynb_checkpoints/: Image labeller notebook-checkpoint.ipynb  recover_binary_mask-checkpoint.ipynb
image-labelling-tool/Image_labelling_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
image-labelling-tool/image_labelling_tool/: admin.py  labelling_tool.py  labelling_tool_jupyter.py  models.py
image-labelling-tool/images/: inpainted_0__labels.json  inpainted_1__labels.json  inpainted_2__labels.json  inpainted_3__labels.json  inpainted_4__labels.json  uea_grounds_1__labels.json  uea_grounds_2__labels.json
image-labelling-tool/tests/: db.sqlite3  manage.py
maskrcnn/: #_assh_bandrewyli@128.32.192.73#8028_b_ahome_aandrewyli_aclutter-det-maskrcnn_amaskrcnn_amodel.py#  bbox_diagnostics.py  bbox_diagnostics.py~  model.py  utils.py  visualize.py
maskrcnn/mrcnn/: model.py  visualize.py
noise/: augmentation.py  augmentation.py~  config.ini  config.ini~  configs.py  datasets.py  detect_utils.py  eval_coco.py  eval_saurabh.py  eval_utils.py  noise.py  noise.py~  noise_augmentation.py~  pipeline.py  pipeline.py~  pipeline_utils.py  pipeline_utils.py~  real_dataset.py  remove_fp.py  resize.py  resize.py~  sim_dataset.py  sim_dataset.py~  utils.py  utils.py~
noise/images/: depth_0.npy  depth_1.npy  depth_3.npy  depth_4.npy  depth_5.npy  depth_7.npy
pcl/: benchmark.py  config.ini  cppdetect.py  detect_utils.py  detector.py  euclidean_cluster_extraction  pcl_detect.py  pcl_utils.py  pcl_vis.py  pipeline.py  pydetect.py  region_growing_segmentation  tune.py
plots/: ablation_plots.py  dataset_stats.py  find_prec_rec.py  make_prec_recall_plots.py
pushing/: convert.ipynb
pushing/.ipynb_checkpoints/: convert-checkpoint.ipynb
resources/: seg_example.eps
sd_maskrcnn/: augment.py  benchmark.py  benchmark_baseline.py  coco_benchmark.py  config.py  data_augmentation.py  dataset.py  model.py  module.py  noise.py  resize.py  saurabh_benchmark.py  supplement_benchmark.py  train.py  utils.py
sd_maskrcnn/data/: plane_pose.tf
sd_maskrcnn/envs/: __init__.py  bin_heap_env.py  constants.py  physics_engine.py  random_variables.py  state_spaces.py  states.py
sd_maskrcnn/gop/: CMakeLists.txt  README.md  detect.py
sd_maskrcnn/gop/cmake/: FindMatio.cmake
sd_maskrcnn/gop/examples/: CMakeLists.txt  example.cpp  example_learned.cpp
sd_maskrcnn/gop/lib/: CMakeLists.txt
sd_maskrcnn/gop/lib/contour/: CMakeLists.txt  boundarydetector.cpp  boundarydetector.h  directedsobel.cpp  directedsobel.h  sketchtokens.cpp  sketchtokens.h  structuredforest.cpp  structuredforest.h
sd_maskrcnn/gop/lib/imgproc/: CMakeLists.txt  color.cpp  color.h  filter.cpp  filter.h  gradient.cpp  gradient.h  image.cpp  image.h  morph.cpp  morph.h  nms.cpp  nms.h  resample.cpp  resample.h
sd_maskrcnn/gop/lib/learning/: CMakeLists.txt  features.cpp  features.h  forest.cpp  forest.h  splitcriterion.cpp  splitcriterion.h  tree.cpp  tree.h  treedata.cpp  treedata.h
sd_maskrcnn/gop/lib/proposals/: CMakeLists.txt  edgefeature.cpp  edgefeature.h  edgeweight.cpp  edgeweight.h  geodesics.cpp  geodesics.h  objectives.cpp  objectives.h  proposal.cpp  proposal.h  saliency.cpp  saliency.h  seed.cpp  seed.h  seedfeature.cpp  seedfeature.h  unary.cpp  unary.h  unaryfeature.cpp  unaryfeature.h
sd_maskrcnn/gop/lib/python/: CMakeLists.txt  boost.cpp  boost.h  contour.cpp  contour.h  dataset.cpp  dataset.h  gop.cpp  gop.h  imgproc.cpp  imgproc.h  learning.cpp  learning.h  map.cpp  map.h  proposals.cpp  proposals.h  segmentation.cpp  segmentation.h  util.cpp  util.h
sd_maskrcnn/gop/lib/python/dataset/: CMakeLists.txt  apng.cpp  apng.h  berkeley.cpp  berkeley.h  coco.cpp  coco.h  covering.cpp  covering.h  evaluation.cpp  evaluation.h  image.cpp  image.h  nyu.cpp  nyu.h  voc.cpp  voc.h  weizmann.cpp  weizmann.h
sd_maskrcnn/gop/lib/segmentation/: CMakeLists.txt  aggregation.cpp  aggregation.h  iouset.cpp  iouset.h  segmentation.cpp  segmentation.h
sd_maskrcnn/gop/lib/util/: CMakeLists.txt  algorithm.cpp  algorithm.h  eigen.cpp  eigen.h  factory.cpp  factory.h  graph.cpp  graph.h  optimization.cpp  optimization.h  qp.cpp  qp.h  rasterize.cpp  rasterize.h  sse_defs.cpp  sse_defs.h  threading.cpp  threading.h  util.cpp  util.h  win_util.cpp  win_util.h
sd_maskrcnn/gop/matlab/: CMakeLists.txt  OverSegmentation.m  Proposal.m  compile.m  example.m  gop_mex.cpp  init_gop.m
sd_maskrcnn/gop/src/: __init__.py  eval_baseline.py  eval_bnd.py  eval_box.py  eval_coco.py  eval_learned.py  eval_seed.py  eval_size.py  example.py  gop.py  plot_box.py  train_mask.py  train_seed.py  util.py
sd_maskrcnn/pcl/: cppdetect.py  euclidean_cluster_extraction  pydetect.py  tune.py
tools/: augment.py  benchmark.py  benchmark_baseline.py  benchmark_siamese.py  detect_npy.py  download_ycb_dataset.py  generate_dist_dataset.py  generate_mask_dataset.py  generate_single_obj_dataset.py  generate_target_ims.py  generate_target_indices.ipynb  inspect_model.ipynb  resize.py  scratch.ipynb  train.py  train_siamese.py
(+117 files in other folders)
